DumpRenderTree doesn't call Internals::resetToConsistentState() before the first test https://bugs.webkit.org/show_bug.cgi?id=197273

Reviewed by Dean Jackson.

Reorder code so that we create gTestRunner before calling resetWebViewToConsistentStateBeforeTesting(),
so that WebCoreTestSupport::resetInternalsObject() is always run.

* DumpRenderTree/mac/DumpRenderTree.mm:
(resetWebViewToConsistentStateBeforeTesting):
(runTest):

Canonical link: https://commits.webkit.org/211508@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@244668 268f45cc-cd09-0410-ab3c-d52691b4dbfc